# horus_inference_server

./: .gitignore  Dockerfile  Dockerfile.ffmpeg  LICENSE  README.md  app-x.py  app.py  conv.py  convert_to_tensorrt.py  demo.py  demo.yml  dep_dl.sh  gradio_web_ui.py  hevc  hoge.py  lib_analyze_base.hpp  lib_horus_type.hpp  main.cpp  main2.cpp  model_download.sh  nvenc.txt  poetylock.sh  pyproject.toml  run.py  run_dev_env.sh  run_nv_ffmpeg.sh  sample_base_analyze.cpp  test.py  test2.py  test3.py  test4.py  type.hpp
.github/workflows/: docker.yml  docker_check.yml  docker_release.yml  python-lint.yml
docker/: Dockerfile.x86  pyproject.toml
docker/utils/: copy_poetry_lock.sh
horus/: dataset_manager.py  inference.py  object_detection.py  plot_annotation.py  project_manager.py  samurai.py  ua_train.py  util.py  video_processing.py
projects/3fa72af2b1/: horus.yaml
projects/d31bad76b1/: horus.yaml
